update local very morning

--- a/src/main/webapp/resources/css/crud/product_create/style.css
+++ b/src/main/webapp/resources/css/crud/product_create/style.css
@@ -204,3 +204,12 @@ form textarea {
 form .btn {
   width: 100%;
 }
+
+
+
+.error-message {
+  display: none;
+}
+.error-message.on {
+  display: block;
+}
