--- a/src/main/webapp/resources/css/men/style.css
+++ b/src/main/webapp/resources/css/men/style.css
@@ -131,3 +131,21 @@
   padding-left: 20px;
   padding-right: 20px;
 }
+
+/* loader */
+.loader {
+	position: fixed;
+	display: none;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	z-index: 10000;
+	background-color: rgba(255,255,255,0.8);
+	overflow: hidden;
+	background-repeat: no-repeat;
+	background-position: center;
+}
+.loader.on {
+	display: block;
+}
