--- a/src/main/webapp/resources/css/user_register/style.css
+++ b/src/main/webapp/resources/css/user_register/style.css
@@ -27,10 +27,16 @@
   justify-content: space-between;
   flex-direction: row-reverse;
 }
-.action > a {
+.action > a,
+.to-home-page {
   color: var(--primary-color);
   font-size: 18px;
   font-weight: 500;
+}
+.to-home-page {
+	display: block;
+	margin-bottom: 30px;
+	text-decoration: none;
 }
 
 .form-checkbox > input {
@@ -59,12 +65,4 @@
   .form-text {
     margin-top: 36px;
   }
-}
-
-
-.error-message {
-  display: none;
-}
-.error-message.on {
-  display: block;
 }
