--- a/src/main/webapp/resources/css/homepage/header_and_footer_responsive.css
+++ b/src/main/webapp/resources/css/homepage/header_and_footer_responsive.css
@@ -66,7 +66,7 @@
     flex-direction: column-reverse;
     justify-content: flex-end;
     align-items: flex-start;
-    box-shadow: 0 0 6px #ccc;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
     transition: all 0.35s ease;
   }
   .nav-and-search.on {
@@ -87,7 +87,11 @@
 
   .header__form-control {
     margin-top: 100px;
+    width: 100%;
+  }
+  .header__form-control > .wrapper {
     margin-left: var(--menu-padding-left);
+    margin-right: var(--menu-padding-left);
   }
 
   .header__nav {
@@ -136,13 +140,6 @@
 
   .nav-and-search {
     width: 70%;
-  }
-
-  .header__form-control {
-    /* width: 250px; */
-    padding: 0;
-    max-width: 180px;
-    position: relative;
   }
 
   .header__form-control {
