--- a/src/main/webapp/WEB-INF/views/fragments/loader.html
+++ b/src/main/webapp/WEB-INF/views/fragments/loader.html
@@ -1,1 +1,7 @@
-<div class="loader" style="background-image:url('/resources/imgs/loader/ajax-loader.gif')"></div>
+<!-- <div class="loader" style="background-image:url('/resources/imgs/loader/ajax-loader.gif')"></div> -->
+<div class="loader">
+<div style="color: var(--tertiary-color)" class="la-square-jelly-box">
+    <div></div>
+    <div></div>
+</div>
+</div>
