--- a/src/main/webapp/resources/css/homepage/header_and_footer.css
+++ b/src/main/webapp/resources/css/homepage/header_and_footer.css
@@ -134,6 +134,7 @@ h3 {
   vertical-align: top;
   font-weight: 300;
 }
+
 .header__form-control {
   width: 250px;
   padding: 0;
@@ -145,11 +146,12 @@ h3 {
   height: var(--search-height);
   width: 100%;
   padding: 0 20px;
+  padding-right: 40px;
   border-radius: 20px;
   border: 2px solid var(--faded-border-color);
   transition: all 0.3s cubic-bezier(0.18, 1.12, 0.8, 0.92);
 }
-.header__form-control  input:focus {
+.header__form-control input:focus {
   outline: 0;
   border-color: var(--tertiary-color);
 }
@@ -263,7 +265,7 @@ h3 {
   font-size: 1rem;
 }
 .footer__child-section > * > ul:nth-of-type(2) {
-	margin-top: 10px;
+	margin-top: 20px;
   flex-direction: row;
 }
 
