--- a/src/main/webapp/resources/css/homepage/header_and_footer_responsive.css
+++ b/src/main/webapp/resources/css/homepage/header_and_footer_responsive.css
@@ -173,6 +173,10 @@
 
 	.entity-preview-info .action .manage-account {
 	display: none;}
+	
+	.footer__child-section > * > ul:nth-of-type(2) {
+	margin-top: 10px;
+}
 }
 
 @media only screen and (max-width: 448px) {
