the last commit, I will move to spring boot, and then continue develop the version 2.0 of this website. This change is due to the difficulty deploying this website on AWS

--- a/src/main/webapp/WEB-INF/views/fragments/loader.html
+++ b/src/main/webapp/WEB-INF/views/fragments/loader.html
@@ -1,6 +1,6 @@
 <!-- <div class="loader" style="background-image:url('/resources/imgs/loader/ajax-loader.gif')"></div> -->
 <div class="loader">
-<div style="color: var(--tertiary-color)" class="la-square-jelly-box">
+<div style="color: var(--quaternary-color)" class="la-square-jelly-box">
     <div></div>
     <div></div>
 </div>
